[tool.poetry]
name = "resman"
version = "0.1.0"
description = ""
authors = ["Yuan Yifan <tsingjyujing@163.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.4"
django-cors-headers = "^3.6.0"
minio = "^7.0.0"
pydantic = "^1.7.3"
mysqlclient = "^2.0.2"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
